manifests/homelab/dns/external-service.yaml
kind: "Service"
apiVersion: "v1"
metadata:
  name: homelab-dns
  namespace: homelab
spec:
  ports:
  - name: "dns-tcp"
    protocol: "TCP"
    port: 53
    targetPort: 53
  - name: "dns-udp"
    protocol: "TCP"
    port: 53
    targetPort: 53
  selector: {}
