manifests/homelab/dns/dns-ingress-route-tcp.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: dns
spec:
  entryPoints:                 
    - dns-tcp
  routes:                       
  - match: HostSNI(`*`)         
    services:                  
    - name: homelab-dns         
      port: 53
